Improve question layout a bit

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -186,6 +186,11 @@ html, body {
 .question .key {
   font-size: 14px;
 }
+
+.question .username {
+  font-style: italic;
+}
+
 .question .center {
   text-align:center;
 }
